--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/resources/templates/XMLCatalog.xml
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/resources/templates/XMLCatalog.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- OASIS XML Catalog file created  by __USER__ on __DATE__ -->
+<!--
+    Document   : __NAME__
+    Created on : __DATE__, __TIME__
+    Author     : __USER__
+    Description:
+        Purpose of the OASIS XML Catalog document follows.
+-->
 
 <!-- see http://www.oasis-open.org/committees/entity/spec.html -->
 
